# gray_scale

tst/: CMakeLists.txt  main.cpp
